# game-of-life-gl

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
pbm/: glider.pbm  hwss.pbm  puslar.pbm
shaders/: fs.glsl  update.glsl  vs.glsl
src/: assert.c  assert.h  canvas.c  canvas.h  io.c  io.h  main.c  program.c  program.h  state.c  state.h  window.c  window.h
